popup fade-out fixed with visibility and opacity

--- a/blocks/popup/_open/popup_open.css
+++ b/blocks/popup/_open/popup_open.css
@@ -1,17 +1,7 @@
-@keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
 
 
 .popup_open {
-  display: flex;
   opacity: 1;
-  animation: fade-in .4s ease;
+  visibility: visible;
 }
 
