--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -11,26 +11,21 @@
 @import url('__image-title/popup__image-title.css');
 
 
-/* @keyframes fade-out {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-} */
-
 .popup {
-  display: none;
+  display: flex;
   height: 100%;
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
+  justify-content: center;
+  align-content: center;
   padding: 0;
   margin: 0 auto;
   background-color: rgba(0, 0, 0, 0.5);
-  animation: fade-out .4s ease;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .3s, visibility .3s ease;
 }
 
 
